# mytwitchbot

./: .clang-format  CMakeLists.txt  README-cmake.md  README.md  mytwitchbot.code-workspace
all/: CMakeLists.txt
include/Core/: utils.h
include/MyTwitchBot/: BotBroker.hpp
include/greeter/: greeter.h
source/: BotBroker.cpp  greeter.cpp
source/Core/: Command.cpp  CommandSet.cpp  ScopeExit.cpp  Throttler.cpp  utils.cpp
source/Inet/: InetSocket.cpp
source/Threading/: Address.cpp  Message.cpp  PostOffice.cpp  RAIIMutex.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
